# AgriSolve

./: .gitignore  First Push.txt  README.md  agrisolve_conversion_engine.html  app.py  auth.py  generate_demo_data.py  pyproject.toml  reconcile.py  requirements.txt  run.bat  script fix  setup.sh  streamlit_app.py
.streamlit/: config.toml  secrets.toml.example
00_README/: README.md  README_v6_6.md
01_Product_Definition/: IP_and_Licensing.md  Pricing_Tiers.md  Product_Offer_OnePager.md  Scope_Boundaries.md
02_Data_Model/: Data_Model_Overview.md  Sample_Schema.sql
03_PowerBI_Templates/: Client_Hosted_Deployment_Patterns.md  Dashboard_Page_List.md  Visual_Standards.md
04_Onboarding/: Client_Data_Intake_Checklist.md  First_3_Clients_Playbook.md  Onboarding_Steps.md
05_Operations/: Change_Control_Template.md  Refresh_Runbook.md  Refresh_Troubleshooting_Runbook.md  Support_Playbook.md
06_Sales_and_Pricing/: Accountant_Partner_Playbook.md  Insurance_Broker_Offer_OnePager.md  Offer_Deck_OnePager.md  Onboarding_Email_Sequence.md  Pricing_Model.md  Sales_Script.md
07_Finance_and_Buffering/: BreakEven_Calculator_Template.md  Cash_Buffer_Rules.md  Revenue_Ramp.md
08_Risk_Register/: Risk_Register.md
09_Legal_and_Compliance/: Contract_Terms_Summary.md  POPIA_Operator_Agreement_Starter.md  Service_Agreement_Skeleton.md
10_Execution_Plan/: 90_Day_Execution_Plan.md  Research_Backbone_Notes.md
11_Templates/: AgriSolve_Client_Intake_and_BreakEven_Templates.xlsx
12_PowerBI_Accelerators/: DAX_Expected_Commission.md  DAX_Measures_Library.md  PBIX_Build_Checklist.md  (+2 more)
(+103 files in other folders)
