[project]
name = "agrisolve-sme"
version = "1.0.0"
description = "AgriSolve SME — Multi-Vertical Reconciliation Dashboard"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.30.0",
    "duckdb>=0.9.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "pandera>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths  = ["tests"]
addopts    = "-v"
pythonpath = ["."]

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
